# object_viewer

./: CMakeLists.txt
resources/shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: main.cpp
src/rendering/: shaderProgram.cpp  shaderProgram.h
src/resources/: resource_manager.cpp  resource_manager.h
